--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 </section>
 
     <div class="image-container">
-        <img src="images/Flower 01.png" alt="image">
-        <img src="images/Rectangle 4.png" alt="image">
-        <img src="images/Rectangle 5.png" alt="image">
-        <img src="images/Rectangle 6.png" alt="image">
+        <img src="Flower 01.png" alt="image">
+        <img src="Rectangle 4.png" alt="image">
+        <img src="Rectangle 5.png" alt="image">
+        <img src="Rectangle 6.png" alt="image">
     </div>
 </section>
 
