--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lato&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
-    <title>Flower Shop</title>
+    <title>Flower lilian</title>
 </head>
 <body>
     <!-- header>.banner-text-container>h1.banner-heading{Let's make beautiful flowers a part of your life.}+p.banner-text{It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.}+button.primary-button{Shop Now}^img.banner-photo -->
